--- a/webroot/css/styles.css
+++ b/webroot/css/styles.css
@@ -1,5 +1,29 @@
+body {
+    background-color: #fcfcfc;
+}
 h1 {
     size: 40px;
+}
+#header {
+    margin-top: 30px;
+}
+#header .logo-container {
+    background-color: #fff;
+    border: 1px solid #f1f1f1;
+    -webkit-box-shadow: 5px 5px 10px 0px rgba(80,80,80,0.2);
+    -moz-box-shadow: 5px 5px 10px 0px rgba(80,80,80,0.2);
+    box-shadow: 2px 2px 10px 0px rgba(80,80,80,0.2);
+}
+#content {
+    margin-top: 20px;
+}
+#content .container {
+    padding: 40px;
+    background-color: #fff;
+    border: 1px solid #f1f1f1;
+    -webkit-box-shadow: 5px 5px 10px 0px rgba(80,80,80,0.2);
+    -moz-box-shadow: 5px 5px 10px 0px rgba(80,80,80,0.2);
+    box-shadow: 2px 2px 10px 0px rgba(80,80,80,0.2);
 }
 #hero {
     width: 100%;
@@ -20,6 +44,8 @@ h1 {
 }
 #hero h3{
     font-size: 18px;
+    margin-top: 10px;
+    line-height: 1.4em;
 
 }
 .messageBox {
@@ -32,4 +58,85 @@ h1 {
     font-size: 26px;
     font-weight: 600;
     padding: 10px 40px;
+}
+
+/* form */
+.users.form {
+    width: 400px;
+    background: #fcfcfc;
+    padding: 25px;
+    margin: 50px auto;
+    float: none;
+    border: 1px solid #f1f1f1; 
+}
+
+fieldset div.input{
+    margin-bottom: 15px;
+}
+
+fieldset label {
+	width: 120px;
+}
+
+fieldset input, select {
+    width: 260px;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+}
+
+textarea {
+  width: 260px;
+    height: 100px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+
+}
+
+.submit input {
+	color: #fff;
+    background-color: #449d44;
+    border-color: #449d44;
+    font-size: 18px;
+    line-height: 1.3333333;
+    border-radius: 6px;
+    box-shadow: none;
+    padding: 10px 25px;
+    border: none;
+}
+.submit input:hover {
+    color: #fff;
+    background-color: #5cb85c;
+    border-color: #5cb85c;
+}
+
+#footer .content{
+    padding: 50px 0;
+    text-align: center;
+}
+
+#flashMessage {
+    text-align: center;
 }
